# pycronyms

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml  treefmt.nix
.github/workflows/: build.yml
pycronyms/: __init__.py  _common.py  acronym.py  acronyms.py  category.py  exceptions.py  handler.py  handler_acronyms.py  language.py  provider.py  provider_helper.py  pycronyms.py  statistics.py
pycronyms/cli/: pycronyms.py  pycronyms_fetch.py  pycronyms_generate.py  pycronyms_guess.py
pycronyms/handlers/: __init__.py  csv.py  json.py
pycronyms/providers/: __init__.py  custom.py  wikipedia.py
pycronyms/pycronyms_output/: README.md  acronyms.csv  acronyms.json  all.json  statistics.csv
pycronyms/pycronyms_output/en/: all.json  computer_science.json
pycronyms/pycronyms_output/fr/: all.json  common.json
pycronyms_output/: README.md  acronyms.csv  acronyms.json  all.json  statistics.csv
pycronyms_output/en/: all.json  computer_science.json
pycronyms_output/fr/: common.json  computer_science.json
tests/: test_acronym.py
