[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycronyms"
version = "0.0.1"
dependencies = [
    "orjson",
    "pydantic",
    "wikipedia",
]
requires-python = ">=3.13.5"
authors = [
  {name = "Théo Bori", email = "nagi@tilde.team"},
]
maintainers = [
  {name = "Théo Bori", email = "nagi@tilde.team"},
]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["acronyms", "aggregator", "generation", "guess"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/theobori/pycronyms"
Documentation = "https://github.com/theobori/pycronyms"
Repository = "https://github.com/me/spam.git"
