[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycronyms"
version = "0.0.1"
dependencies = [
  "orjson",
  "pydantic",
  "wikipedia",
  "thefuzz"
]
requires-python = ">=3.13.5"
authors = [
  {name = "Théo Bori", email = "nagi@tilde.team"}
]
maintainers = [
  {name = "Théo Bori", email = "nagi@tilde.team"}
]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["acronyms", "aggregator", "generation", "guess"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
pycronyms = "pycronyms.cli.pycronyms:main"

[project.urls]
Homepage = "https://github.com/theobori/pycronyms"
Documentation = "https://github.com/theobori/pycronyms"
Repository = "https://github.com/theobori/pycronyms"

[tool.setuptools]
packages = ["pycronyms"]
